--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,6 +3,6 @@ spring:
     name: registry-service
   cloud:
     config:
-      uri: http://localhost:8070
+      uri: https://config-service.mybluemix.net
       username: root
       password: s3cr3t
